--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -69,7 +69,7 @@ repos:
     hooks:
       - id: mypy
         name: mypy
-        entry: "bash ./tests/run_mypy.sh"
+        entry: "bash ./mypy.sh"
         language: system
         types: [python]
         pass_filenames: false
