--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,59 @@
+altair==5.3.0 ; python_version >= "3.11" and python_version < "4.0"
 annotated-types==0.6.0 ; python_version >= "3.11" and python_version < "4.0"
-anyio==3.7.1 ; python_version >= "3.11" and python_version < "4.0"
+attrs==23.2.0 ; python_version >= "3.11" and python_version < "4.0"
+beautifulsoup4==4.12.3 ; python_version >= "3.11" and python_version < "4.0"
+blinker==1.8.1 ; python_version >= "3.11" and python_version < "4.0"
+cachetools==5.3.3 ; python_version >= "3.11" and python_version < "4.0"
 certifi==2024.2.2 ; python_version >= "3.11" and python_version < "4.0"
+chardet==5.2.0 ; python_version >= "3.11" and python_version < "4.0"
 charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
-fastapi==0.104.1 ; python_version >= "3.11" and python_version < "4.0"
-filelock==3.13.1 ; python_version >= "3.11" and python_version < "4.0"
-fsspec==2024.2.0 ; python_version >= "3.11" and python_version < "4.0"
-h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
-huggingface-hub==0.21.4 ; python_version >= "3.11" and python_version < "4.0"
-idna==3.6 ; python_version >= "3.11" and python_version < "4.0"
+cssselect==1.2.0 ; python_version >= "3.11" and python_version < "4.0"
+gitdb==4.0.11 ; python_version >= "3.11" and python_version < "4.0"
+gitpython==3.1.43 ; python_version >= "3.11" and python_version < "4.0"
+idna==3.7 ; python_version >= "3.11" and python_version < "4.0"
 jinja2==3.1.3 ; python_version >= "3.11" and python_version < "4.0"
+joblib==1.4.0 ; python_version >= "3.11" and python_version < "4.0"
+jsonschema-specifications==2023.12.1 ; python_version >= "3.11" and python_version < "4.0"
+jsonschema==4.21.1 ; python_version >= "3.11" and python_version < "4.0"
+lxml-html-clean==0.1.1 ; python_version >= "3.11" and python_version < "4.0"
+lxml==5.2.1 ; python_version >= "3.11" and python_version < "4.0"
+markdown-it-py==3.0.0 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.11" and python_version < "4.0"
-mpmath==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
-networkx==3.2.1 ; python_version >= "3.11" and python_version < "4.0"
+mdurl==0.1.2 ; python_version >= "3.11" and python_version < "4.0"
+networkx==3.3 ; python_version >= "3.11" and python_version < "4.0"
+nltk==3.8.1 ; python_version >= "3.11" and python_version < "4.0"
 numpy==1.26.4 ; python_version >= "3.11" and python_version < "4.0"
-nvidia-cublas-cu12==12.1.3.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
-nvidia-cuda-cupti-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
-nvidia-cuda-nvrtc-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
-nvidia-cuda-runtime-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
-nvidia-cudnn-cu12==8.9.2.26 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
-nvidia-cufft-cu12==11.0.2.54 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
-nvidia-curand-cu12==10.3.2.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
-nvidia-cusolver-cu12==11.4.5.107 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
-nvidia-cusparse-cu12==12.1.0.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
-nvidia-nccl-cu12==2.19.3 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
-nvidia-nvjitlink-cu12==12.4.99 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
-nvidia-nvtx-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0"
 packaging==24.0 ; python_version >= "3.11" and python_version < "4.0"
-pydantic-core==2.16.3 ; python_version >= "3.11" and python_version < "4.0"
-pydantic==2.6.3 ; python_version >= "3.11" and python_version < "4.0"
+pandas==2.2.2 ; python_version >= "3.11" and python_version < "4.0"
+pillow==10.3.0 ; python_version >= "3.11" and python_version < "4.0"
+protobuf==4.25.3 ; python_version >= "3.11" and python_version < "4.0"
+pyarrow==16.0.0 ; python_version >= "3.11" and python_version < "4.0"
+pydantic-core==2.18.2 ; python_version >= "3.11" and python_version < "4.0"
+pydantic==2.7.1 ; python_version >= "3.11" and python_version < "4.0"
+pydeck==0.8.0 ; python_version >= "3.11" and python_version < "4.0"
+pygments==2.17.2 ; python_version >= "3.11" and python_version < "4.0"
+python-dateutil==2.9.0.post0 ; python_version >= "3.11" and python_version < "4.0"
 python-dotenv==1.0.1 ; python_version >= "3.11" and python_version < "4.0"
-pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "4.0"
-regex==2023.12.25 ; python_version >= "3.11" and python_version < "4.0"
+pytz==2024.1 ; python_version >= "3.11" and python_version < "4.0"
+readability-lxml==0.8.1 ; python_version >= "3.11" and python_version < "4.0"
+referencing==0.35.0 ; python_version >= "3.11" and python_version < "4.0"
+regex==2024.4.28 ; python_version >= "3.11" and python_version < "4.0"
 requests==2.31.0 ; python_version >= "3.11" and python_version < "4.0"
-safetensors==0.4.2 ; python_version >= "3.11" and python_version < "4.0"
-sniffio==1.3.1 ; python_version >= "3.11" and python_version < "4.0"
-starlette==0.27.0 ; python_version >= "3.11" and python_version < "4.0"
-sympy==1.12 ; python_version >= "3.11" and python_version < "4.0"
-tokenizers==0.15.2 ; python_version >= "3.11" and python_version < "4.0"
-torch==2.2.1 ; python_version >= "3.11" and python_version < "4.0"
+rich==13.7.1 ; python_version >= "3.11" and python_version < "4.0"
+rpds-py==0.18.0 ; python_version >= "3.11" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
+smmap==5.0.1 ; python_version >= "3.11" and python_version < "4.0"
+soupsieve==2.5 ; python_version >= "3.11" and python_version < "4.0"
+streamlit==1.33.0 ; python_version >= "3.11" and python_version < "4.0"
+summary==0.2.0 ; python_version >= "3.11" and python_version < "4.0"
+tenacity==8.2.3 ; python_version >= "3.11" and python_version < "4.0"
+toml==0.10.2 ; python_version >= "3.11" and python_version < "4.0"
+toolz==0.12.1 ; python_version >= "3.11" and python_version < "4.0"
+tornado==6.4 ; python_version >= "3.11" and python_version < "4.0"
 tqdm==4.66.2 ; python_version >= "3.11" and python_version < "4.0"
-transformers==4.38.2 ; python_version >= "3.11" and python_version < "4.0"
-triton==2.2.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version < "3.12" and python_version >= "3.11"
-typing-extensions==4.10.0 ; python_version >= "3.11" and python_version < "4.0"
+typing-extensions==4.11.0 ; python_version >= "3.11" and python_version < "4.0"
+tzdata==2024.1 ; python_version >= "3.11" and python_version < "4.0"
 urllib3==2.2.1 ; python_version >= "3.11" and python_version < "4.0"
-uvicorn==0.24.0.post1 ; python_version >= "3.11" and python_version < "4.0"
+watchdog==4.0.0 ; python_version >= "3.11" and python_version < "4.0" and platform_system != "Darwin"
