--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ lxml-html-clean = "^0.1.1"
 readability-lxml = "^0.8.1"
 requests = "^2.31.0"
 streamlit = "^1.33.0"
+ollama = "^0.1.9"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
