--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 altair==5.3.0 ; python_version >= "3.11" and python_version < "4.0"
+anyio==4.3.0 ; python_version >= "3.11" and python_version < "4.0"
 attrs==23.2.0 ; python_version >= "3.11" and python_version < "4.0"
 beautifulsoup4==4.12.3 ; python_version >= "3.11" and python_version < "4.0"
 blinker==1.8.1 ; python_version >= "3.11" and python_version < "4.0"
@@ -11,6 +12,9 @@ colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and platfo
 cssselect==1.2.0 ; python_version >= "3.11" and python_version < "4.0"
 gitdb==4.0.11 ; python_version >= "3.11" and python_version < "4.0"
 gitpython==3.1.43 ; python_version >= "3.11" and python_version < "4.0"
+h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
+httpcore==1.0.5 ; python_version >= "3.11" and python_version < "4.0"
+httpx==0.27.0 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.7 ; python_version >= "3.11" and python_version < "4.0"
 jinja2==3.1.3 ; python_version >= "3.11" and python_version < "4.0"
 jsonschema-specifications==2023.12.1 ; python_version >= "3.11" and python_version < "4.0"
@@ -21,6 +25,7 @@ markdown-it-py==3.0.0 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.11" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.11" and python_version < "4.0"
 numpy==1.26.4 ; python_version >= "3.11" and python_version < "4.0"
+ollama==0.1.9 ; python_version >= "3.11" and python_version < "4.0"
 packaging==24.0 ; python_version >= "3.11" and python_version < "4.0"
 pandas==2.2.2 ; python_version >= "3.11" and python_version < "4.0"
 pillow==10.3.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -38,6 +43,7 @@ rich==13.7.1 ; python_version >= "3.11" and python_version < "4.0"
 rpds-py==0.18.0 ; python_version >= "3.11" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
 smmap==5.0.1 ; python_version >= "3.11" and python_version < "4.0"
+sniffio==1.3.1 ; python_version >= "3.11" and python_version < "4.0"
 soupsieve==2.5 ; python_version >= "3.11" and python_version < "4.0"
 streamlit==1.33.0 ; python_version >= "3.11" and python_version < "4.0"
 tenacity==8.2.3 ; python_version >= "3.11" and python_version < "4.0"
