--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ readability-lxml = "^0.8.1"
 requests = "^2.31.0"
 streamlit = "^1.33.0"
 ollama = "^0.1.9"
+langdetect = "^1.0.9"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
