--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ altair==5.3.0 ; python_version >= "3.11" and python_version < "4.0"
 anyio==4.3.0 ; python_version >= "3.11" and python_version < "4.0"
 attrs==23.2.0 ; python_version >= "3.11" and python_version < "4.0"
 beautifulsoup4==4.12.3 ; python_version >= "3.11" and python_version < "4.0"
-blinker==1.8.1 ; python_version >= "3.11" and python_version < "4.0"
+blinker==1.8.2 ; python_version >= "3.11" and python_version < "4.0"
 cachetools==5.3.3 ; python_version >= "3.11" and python_version < "4.0"
 certifi==2024.2.2 ; python_version >= "3.11" and python_version < "4.0"
 chardet==5.2.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -16,11 +16,12 @@ h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 httpcore==1.0.5 ; python_version >= "3.11" and python_version < "4.0"
 httpx==0.27.0 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.7 ; python_version >= "3.11" and python_version < "4.0"
-jinja2==3.1.3 ; python_version >= "3.11" and python_version < "4.0"
+jinja2==3.1.4 ; python_version >= "3.11" and python_version < "4.0"
 jsonschema-specifications==2023.12.1 ; python_version >= "3.11" and python_version < "4.0"
-jsonschema==4.21.1 ; python_version >= "3.11" and python_version < "4.0"
+jsonschema==4.22.0 ; python_version >= "3.11" and python_version < "4.0"
+langdetect==1.0.9 ; python_version >= "3.11" and python_version < "4.0"
 lxml-html-clean==0.1.1 ; python_version >= "3.11" and python_version < "4.0"
-lxml==5.2.1 ; python_version >= "3.11" and python_version < "4.0"
+lxml==5.2.2 ; python_version >= "3.11" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.11" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.11" and python_version < "4.0"
@@ -30,23 +31,23 @@ packaging==24.0 ; python_version >= "3.11" and python_version < "4.0"
 pandas==2.2.2 ; python_version >= "3.11" and python_version < "4.0"
 pillow==10.3.0 ; python_version >= "3.11" and python_version < "4.0"
 protobuf==4.25.3 ; python_version >= "3.11" and python_version < "4.0"
-pyarrow==16.0.0 ; python_version >= "3.11" and python_version < "4.0"
-pydeck==0.8.0 ; python_version >= "3.11" and python_version < "4.0"
-pygments==2.17.2 ; python_version >= "3.11" and python_version < "4.0"
+pyarrow==16.1.0 ; python_version >= "3.11" and python_version < "4.0"
+pydeck==0.9.1 ; python_version >= "3.11" and python_version < "4.0"
+pygments==2.18.0 ; python_version >= "3.11" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version >= "3.11" and python_version < "4.0"
 python-dotenv==1.0.1 ; python_version >= "3.11" and python_version < "4.0"
 pytz==2024.1 ; python_version >= "3.11" and python_version < "4.0"
 readability-lxml==0.8.1 ; python_version >= "3.11" and python_version < "4.0"
-referencing==0.35.0 ; python_version >= "3.11" and python_version < "4.0"
+referencing==0.35.1 ; python_version >= "3.11" and python_version < "4.0"
 requests==2.31.0 ; python_version >= "3.11" and python_version < "4.0"
 rich==13.7.1 ; python_version >= "3.11" and python_version < "4.0"
-rpds-py==0.18.0 ; python_version >= "3.11" and python_version < "4.0"
+rpds-py==0.18.1 ; python_version >= "3.11" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
 smmap==5.0.1 ; python_version >= "3.11" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.11" and python_version < "4.0"
 soupsieve==2.5 ; python_version >= "3.11" and python_version < "4.0"
-streamlit==1.33.0 ; python_version >= "3.11" and python_version < "4.0"
-tenacity==8.2.3 ; python_version >= "3.11" and python_version < "4.0"
+streamlit==1.34.0 ; python_version >= "3.11" and python_version < "4.0"
+tenacity==8.3.0 ; python_version >= "3.11" and python_version < "4.0"
 toml==0.10.2 ; python_version >= "3.11" and python_version < "4.0"
 toolz==0.12.1 ; python_version >= "3.11" and python_version < "4.0"
 tornado==6.4 ; python_version >= "3.11" and python_version < "4.0"
