--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,72 +5,25 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
+      - id: check-yaml
       - id: check-added-large-files
       - id: check-case-conflict
       - id: check-executables-have-shebangs
       - id: check-json
+      - id: check-shebang-scripts-are-executable
+      - id: check-toml
       - id: detect-private-key
       - id: fix-byte-order-marker
       - id: mixed-line-ending
-      - id: file-contents-sorter
-        files: requirements.txt|requirements-dev.txt
-  # ------------------------- ops ------------------------
-  - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
-    rev: 0.2.3
+  - repo: https://github.com/dnephin/pre-commit-golang
+    rev: v0.5.1
     hooks:
-      - id: yamlfmt
-        args:
-          - --mapping
-          - "2"
-          - --sequence
-          - "4"
-          - --offset
-          - "2"
-          - --width
-          - "150"
-          - --preserve-quotes
-  - repo: https://github.com/AleksaC/hadolint-py
-    rev: v2.12.0.3
-    hooks:
-      - id: hadolint
-        args:
-          - --ignore
-          - DL3025
-          - --ignore
-          - DL3018
-          - --ignore
-          - DL3027
-  # ------------------------- python ------------------------
-  - repo: https://github.com/psf/black
-    rev: 23.11.0
-    hooks:
-      - id: black
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.1.6
-    hooks:
-      - id: ruff
-        args: ["--fix", "--ignore=E402,E501"]
-        exclude: ^migrations/
-  - repo: https://github.com/asottile/reorder_python_imports
-    rev: v3.12.0
-    hooks:
-      - id: reorder-python-imports
-  - repo: https://github.com/python-poetry/poetry
-    rev: 1.7.1
-    hooks:
-      - id: poetry-check
-      - id: poetry-lock
-  - repo: https://github.com/python-poetry/poetry-plugin-export
-    rev: 1.6.0
-    hooks:
-      - id: poetry-export
-        args: ["--without-hashes", "-f", "requirements.txt", "-o", "requirements.txt"]
-  - repo: local
-    hooks:
-      - id: mypy
-        name: mypy
-        entry: "poetry run mypy article_summarizer"
-        language: system
-        types: [python]
-        pass_filenames: false
-        require_serial: true
+      - id: go-fmt
+      - id: go-vet
+      - id: go-imports
+      # - id: no-go-testing
+      - id: golangci-lint
+      # - id: go-critic
+      # - id: go-unit-tests
+      - id: go-build
+      - id: go-mod-tidy
