--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,6 @@
----
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: v5.0.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -15,15 +14,15 @@ repos:
       - id: detect-private-key
       - id: fix-byte-order-marker
       - id: mixed-line-ending
-  - repo: https://github.com/dnephin/pre-commit-golang
-    rev: v0.5.1
+  - repo: https://github.com/kahnwong/pre-commit
+    rev: "ecfbd9e"
     hooks:
-      - id: go-fmt
-      - id: go-vet
-      - id: go-imports
-      # - id: no-go-testing
-      - id: golangci-lint
-      # - id: go-critic
-      # - id: go-unit-tests
       - id: go-build
+      - id: go-fmt
+      - id: go-imports
       - id: go-mod-tidy
+      - id: go-unit-tests
+      - id: go-vet
+      - id: golangci-lint
+      - id: yamlfmt
+      - id: trufflehog
