--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 # ide
 .idea
 
-# python
-.ipynb_checkpoints
-__pycache__
-*.ipynb
-
 # secrets
 .env
 
 # binary
 article-summarizer
+
+# build
+dist
